overlays/gcp-ihavasu-chatbot-challenge-dev/env0-uswe1a-cc/chatbot/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chatbot
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
