overlays/gcp-ihavasu-chatbot-challenge-dev/env0-uswe1a-cc/chatbot/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot
  namespace: chatbot
  labels:
    app: chatbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatbot
  template:
    metadata:
      name: chatbot
      labels:
        app: chatbot
    spec:
      containers:
      - name: chatbot
        image: gcr.io/ihavasu-chatbot-challenge-dev/chatbot-challenge:16c7ccd-dirty@sha256:db9363a78e8a70ea4d669ba6571534b2903f8fb98dfef75d5bd3852d39b56e21
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 4444
          protocol: TCP
      restartPolicy: Always
