overlays/gcp-ihavasu-chatbot-challenge-dev/env0-uswe1a-cc/chatbot/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: chatbot
spec:
  ports:
  - protocol: TCP
    port: 4444
    name: web
  selector:
    app: chatbot
