overlays/gcp-ihavasu-chatbot-challenge-dev/env0-uswe1a-cc/chatbot/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-chatbot
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: chatbot.cc-dev-gcp.ihavasu.com
    http:
      paths:
      - path: /
        backend:
          serviceName: chatbot
          servicePort: 4444
